[gd_scene load_steps=4 format=3 uid="uid://dk2tibvgpxlyb"]

[ext_resource type="Script" uid="uid://drkeqmdksf2pr" path="res://src/ui/components/artifact_button.gd" id="1_4snv3"]
[ext_resource type="Texture2D" uid="uid://dqpbl8qggjqqx" path="res://assets/map/artifact/ammonit.webp" id="2_87fd2"]
[ext_resource type="Texture2D" uid="uid://dtayffjjwm2t2" path="res://assets/ui/currency/coin.webp" id="4_87fd2"]

[node name="ArtifactButton" type="Button"]
custom_minimum_size = Vector2(312, 312)
offset_right = 312.0
offset_bottom = 294.0
script = ExtResource("1_4snv3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ImageRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_87fd2")
stretch_mode = 5

[node name="NameLbl" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "knife_fire"
horizontal_alignment = 1

[node name="CountLbl" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="LevelLvl" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="XpBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 2
step = 1.0
show_percentage = false

[node name="XpLbl" type="Label" parent="MarginContainer/VBoxContainer/XpBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("4_87fd2")
expand_mode = 2
stretch_mode = 5

[node name="CurrencyLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
